db 셋팅 수정